Quick fix for spacing of non-header links in mobile header links list

--- a/src/components/header/header_links/_header_link.scss
+++ b/src/components/header/header_links/_header_link.scss
@@ -16,4 +16,9 @@
       justify-content: flex-start;
     }
   }
+
+  button:not(.euiHeaderLink),
+  a:not(.euiHeaderLink) {
+    margin: $euiSizeXS;
+  }
 }
